--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -74,11 +74,11 @@ const data = [
   {description}
   {pubDate}
   {heroImage}>
-  <div class='xs:h-[35vmin] h-[40vmin] overflow-hidden sm:h-[30vmin] md:h-[25vmin] lg:h-[40vmin]'>
+  <div class='h-[40vmin] overflow-hidden xs:h-[35vmin] sm:h-[30vmin] md:h-[25vmin] lg:h-[40vmin]'>
     <YandexMap
       class={[
         'min-h-full w-full',
-        'bg-25% sm:bg-20% lg:bg-10% bg-waiting bg-gray-400 bg-clip-content bg-center bg-no-repeat',
+        'bg-gray-400 bg-waiting bg-25% bg-clip-content bg-center bg-no-repeat sm:bg-20% lg:bg-10%',
         'border-4'
       ]}
       geo={data[0]}
@@ -138,11 +138,11 @@ const data = [
     proin gravida. Egestas integer eget aliquet nibh praesent tristique magna.
   </p>
 
-  <div class='xs:h-[35vmin] h-[40vmin] overflow-hidden sm:h-[30vmin] md:h-[25vmin] lg:h-[40vmin]'>
+  <div class='h-[40vmin] overflow-hidden xs:h-[35vmin] sm:h-[30vmin] md:h-[25vmin] lg:h-[40vmin]'>
     <YandexMap
       class={[
         'min-h-full w-full',
-        'bg-25% sm:bg-20% lg:bg-10% bg-waiting bg-gray-400 bg-clip-content bg-center bg-no-repeat',
+        'bg-gray-400 bg-waiting bg-25% bg-clip-content bg-center bg-no-repeat sm:bg-20% lg:bg-10%',
         'border-4'
       ]}
       geo={data[1]}
