--- a/src/pages/astro/index.astro
+++ b/src/pages/astro/index.astro
@@ -29,7 +29,7 @@ const { name: title, description } = app;
 
   <p>Here are a few ideas on how to get started with the template:</p>
 
-  <ul class='list-circle mb-4 list-inside leading-relaxed'>
+  <ul class='mb-4 list-inside list-circle leading-relaxed'>
     <li>Edit this page in <code>src/pages/index.astro</code></li>
     <li>Edit the site header items in <code>src/components/Header.astro</code></li>
     <li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
