--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,7 @@ const description = 'Welcome to Astro';
     />
   </dev>
 
-  <section class='bg-loading bg-10% mb-16 bg-clip-content bg-center bg-no-repeat'>
+  <section class='mb-16 bg-loading bg-10% bg-clip-content bg-center bg-no-repeat'>
     <h2 class='mb-8 mt-0 text-center text-lg lg:text-xl'>Svelte Carousel & Astro Content :</h2>
     <ContentCarousel
       class='h-48 md:h-64 lg:h-48'
