--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -17,13 +17,14 @@ import { app, seo } from '$app/configs';
 const {
   yandex: { counter }
 } = seo;
+
+// transition:animate='none'
 ---
 
 <!doctype html>
 <html
   lang='ru'
-  class='dark'
-  transition:animate='none'>
+  class='theme-dark'>
   <head>
     <Head
       {title}
