--- a/src/lib/astro/Footer.astro
+++ b/src/lib/astro/Footer.astro
@@ -5,7 +5,7 @@ import { Timer } from '@daks.dev/astro.sdk/astro/timer';
 const today = new Date();
 ---
 
-<footer class='bg-gray-700/50 text-gray-500'>
+<footer class='bg-gray-700/50 text-gray-500 bp:hidden'>
   <div class='wrapper flex h-16 items-center justify-between gap-x-16'>
     <span class='text-sm sm:text-base'>
       &copy; {today.getFullYear()} DAKS.DEV&nbsp;&trade;
