--- a/src/lib/astro/Header.astro
+++ b/src/lib/astro/Header.astro
@@ -11,13 +11,15 @@ const {
 <Navbar
   {items}
   custom={{
-    home: 'h-9'
+    home: 'h-8',
+    //theme: 'ml-8',
+    item: 'h-10 bp:h-full'
   }}
   brand={{
-    label,
     icon: {
-      home: 'package',
-      page: 'code-block'
-    }
+      home: 'code-block',
+      page: 'code'
+    },
+    label
   }}
 />
